force-app/main/default/objects/Account/fields/C360_Count_of_Legacy_X_Accounts__c.field-meta.xml
<CustomField>
    <fullName>C360_Count_of_Legacy_X_Accounts__c</fullName>
    <description>Returns 1 if the Legacy System Cd is &quot;X&quot; (case sensitive). Needed for Customer 360 calculation.</description>
    <formula>IF(
and(
    ISBLANK( Legacy_System_Cd__c )=false ,
  Legacy_System_Cd__c =&quot;X&quot; )
,
1,0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Legacy X Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>