force-app/main/default/objects/Account/fields/C360_Count_of_Prospects__c.field-meta.xml
<CustomField>
    <fullName>C360_Count_of_Prospects__c</fullName>
    <description>Returns 1 if Legacy System Cd is blank and the record type is Prospect. Needed for Customer 360 calculation.</description>
    <formula>IF(AND(
  RecordType.DeveloperName = &quot;Prospect&quot;,
  ISBLANK( Legacy_System_Cd__c ) = TRUE)
 , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Prospects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>