force-app/main/default/objects/Account/fields/C360_Customer_360__c.field-meta.xml
<CustomField>
    <fullName>C360_Customer_360__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which Customer 360 is this account grouped with?</description>
    <label>Customer 360</label>
    <referenceTo>C360_Customer_360__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>