force-app/main/default/objects/Account/fields/C360_Customer_360_Name__c.field-meta.xml
<CustomField>
    <fullName>C360_Customer_360_Name__c</fullName>
    <description>Commented out 10/2017 by BW as this feature is not adopted and it is occupying a formula limit.</description>
    <formula>/* C360_Customer_360__r.Name */
&quot;Deprecated functionality&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer 360 Name</label>
    <type>Text</type>
</CustomField>