force-app/main/default/objects/Account/fields/Canadian_A_Customer_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Canadian_A_Customer_Nbr__c</fullName>
    <description>This converts our Canadian customer number to a format that is used by other systems.  Only A customers come in to salesforce in account</description>
    <formula>IF(  Legacy_System_Cd__c  = &quot;CA&quot;, (MID( Zpl_Customer_ID__c , 6, 15)),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canadian A Customer Nbr</label>
    <type>Text</type>
</CustomField>