force-app/main/default/objects/Account/fields/Canadian_B_Customer_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Canadian_B_Customer_Nbr__c</fullName>
    <description>This converts our Canadian customer number to it&apos;s sister &quot;B&quot; account, in the format that is used by other systems.</description>
    <formula>IF(  Legacy_System_Cd__c  = &quot;CA&quot;, (Convert_Canada_A_custs_to_B__c &amp; MID( Zpl_Customer_ID__c , 9, 15)),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canadian B Customer Nbr</label>
    <type>Text</type>
</CustomField>