force-app/main/default/objects/Account/fields/Carbonless__c.field-meta.xml
<CustomField>
    <fullName>Carbonless__c</fullName>
    <label>Carbonless</label>
    <length>255</length>
    <type>Text</type>
</CustomField>