force-app/main/default/objects/Account/fields/Carbonless_Notes__c.field-meta.xml
<CustomField>
    <fullName>Carbonless_Notes__c</fullName>
    <label>Carbonless Notes</label>
    <type>TextArea</type>
</CustomField>