force-app/main/default/objects/Account/fields/Carrier_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Preferences__c</fullName>
    <label>Carrier Preferences</label>
    <type>TextArea</type>
</CustomField>