force-app/main/default/objects/Account/fields/CBR__c.field-meta.xml
<CustomField>
    <fullName>CBR__c</fullName>
    <formula>&quot;If you need a Customer Business Review, please ask your manager to pull one from PowerBI. Reach out to your Manager or RSA with questions&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CBR:</label>
    <type>Text</type>
</CustomField>