force-app/main/default/objects/Account/fields/CC_Req__c.field-meta.xml
<CustomField>
    <fullName>CC_Req__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CC Req</label>
    <type>Checkbox</type>
</CustomField>