force-app/main/default/objects/Account/fields/Cert_Ins__c.field-meta.xml
<CustomField>
    <fullName>Cert_Ins__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cert Ins</label>
    <type>Checkbox</type>
</CustomField>