force-app/main/default/objects/Account/fields/Chain_Account__c.field-meta.xml
<CustomField>
    <fullName>Chain_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chain Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chain Accounts</relationshipLabel>
    <relationshipName>ChainAccount</relationshipName>
    <type>Lookup</type>
</CustomField>