force-app/main/default/objects/Account/fields/Chain_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Chain_Account_Code__c</fullName>
    <label>Chain Account Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>