force-app/main/default/objects/Account/fields/Charge_and_Hold__c.field-meta.xml
<CustomField>
    <fullName>Charge_and_Hold__c</fullName>
    <description>CUSTOMER SERVICE SPECIFIC</description>
    <label>Charge and Hold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>