force-app/main/default/objects/Account/fields/Charge_and_Hold_if_Yes_Describe__c.field-meta.xml
<CustomField>
    <fullName>Charge_and_Hold_if_Yes_Describe__c</fullName>
    <description>CUSTOMER SERVICE SPECIFIC</description>
    <label>Charge and Hold, if Yes - Describe</label>
    <length>200</length>
    <type>Text</type>
</CustomField>