force-app/main/default/objects/Account/fields/CLIasCurrency_Test__c.field-meta.xml
<CustomField>
    <fullName>CLIasCurrency_Test__c</fullName>
    <formula>ActivePricingContract__r.CLIs_to_Action_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CLI as Currency Test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>