force-app/main/default/objects/Account/fields/Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Number__c</fullName>
    <description>Client Number for 3PL</description>
    <label>Client Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>