force-app/main/default/objects/Account/fields/Client_Number_to_Merge_with__c.field-meta.xml
<CustomField>
    <fullName>Client_Number_to_Merge_with__c</fullName>
    <description>Gives admin vendor code information to merge prospect Vendor with Vendor from Credit</description>
    <label>Client Number to Merge with</label>
    <length>18</length>
    <type>Text</type>
</CustomField>