force-app/main/default/objects/Account/fields/Close_Deal_Ratio_Percent__c.field-meta.xml
<CustomField>
    <fullName>Close_Deal_Ratio_Percent__c</fullName>
    <description>Close Deal Ratio Percent</description>
    <formula>Sum_Num_Closed_Oppty__c  /  ( MAX(Sum_Num_Total_Oppty__c,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Close Deal Ratio Percent</inlineHelpText>
    <label>Close Deal Ratio Percent</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>