force-app/main/default/objects/Account/fields/Collector__c.field-meta.xml
<CustomField>
    <fullName>Collector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Credit &amp; Collections user assigned to the BillTo account</description>
    <label>Collector</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account1</relationshipName>
    <type>Lookup</type>
</CustomField>