force-app/main/default/objects/Account/fields/Collector_Name__c.field-meta.xml
<CustomField>
    <fullName>Collector_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collector Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>