force-app/main/default/objects/Account/fields/Colors_Notes__c.field-meta.xml
<CustomField>
    <fullName>Colors_Notes__c</fullName>
    <label>Colors Notes</label>
    <type>TextArea</type>
</CustomField>