force-app/main/default/objects/Account/fields/Comments_Loaded_in_VOS__c.field-meta.xml
<CustomField>
    <fullName>Comments_Loaded_in_VOS__c</fullName>
    <description>Checklist Item for CX</description>
    <inlineHelpText>Work with sales to see if special delivery comments or item comments need to be loaded in VOS to default for customer, add SOC contact in VOS</inlineHelpText>
    <label>Comments Loaded in VOS</label>
    <length>250</length>
    <type>Text</type>
</CustomField>