force-app/main/default/objects/Account/fields/Confidential_Account__c.field-meta.xml
<CustomField>
    <fullName>Confidential_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for the Secret Account Project</description>
    <label>Confidential Account</label>
    <type>Checkbox</type>
</CustomField>