force-app/main/default/objects/Account/fields/Consortium__c.field-meta.xml
<CustomField>
    <fullName>Consortium__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consortium</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consortium Members</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>