force-app/main/default/objects/Account/fields/Consortium_Record__c.field-meta.xml
<CustomField>
    <fullName>Consortium_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This indicates if the Account is an aggregate Consortium account, not whether or not it is part of a consortium</inlineHelpText>
    <label>Consortium Record?</label>
    <type>Checkbox</type>
</CustomField>