force-app/main/default/objects/Account/fields/Contract_BillToNumber__c.field-meta.xml
<CustomField>
    <fullName>Contract_BillToNumber__c</fullName>
    <label>Contract_BillToNumber</label>
    <length>16</length>
    <type>Text</type>
</CustomField>