force-app/main/default/objects/Account/fields/Contract_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Contract_Coordinator__c</fullName>
    <description>Will be fed in from Enable on Parent Accounts</description>
    <label>Contract Coordinator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>