force-app/main/default/objects/Account/fields/Contract_Group_Description__c.field-meta.xml
<CustomField>
    <fullName>Contract_Group_Description__c</fullName>
    <description>For Unify Contract Group ID</description>
    <label>Contract Group Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>