force-app/main/default/objects/Account/fields/Convert_Canada_A_custs_to_B__c.field-meta.xml
<CustomField>
    <fullName>Convert_Canada_A_custs_to_B__c</fullName>
    <description>For the Green Gauge reports, we need to convert the 3 digit A customers in Canada to their respective B numbers</description>
    <formula>IF(MID( Zpl_Customer_ID__c , 6, 3)= &quot;APA&quot;, &quot;BRB&quot;,
IF(MID( Zpl_Customer_ID__c , 6, 3)= &quot;AMA&quot;, &quot;BQA&quot;,
IF(MID( Zpl_Customer_ID__c , 6, 3)= &quot;AMC&quot;, &quot;BQC&quot;,
IF(MID( Zpl_Customer_ID__c , 6, 3)= &quot;AIA&quot;, &quot;BNC&quot;,
IF(MID( Zpl_Customer_ID__c , 6, 3)= &quot;AIR&quot;, &quot;BNR&quot;,
IF(MID( Zpl_Customer_ID__c , 6, 3)= &quot;AIS&quot;, &quot;BNS&quot;,
IF(MID( Zpl_Customer_ID__c , 6, 3)= &quot;A2C&quot;, &quot;BHC&quot;,
IF(MID( Zpl_Customer_ID__c , 6, 3)= &quot;A2D&quot;, &quot;BHD&quot;,
IF(MID( Zpl_Customer_ID__c , 6, 3)= &quot;A1A&quot;, &quot;BDB&quot;,
IF(MID( Zpl_Customer_ID__c , 6, 3)= &quot;A1C&quot;, &quot;BDC&quot;,
IF(MID( Zpl_Customer_ID__c , 6, 3)= &quot;A1D&quot;, &quot;BDD&quot;,
IF(MID( Zpl_Customer_ID__c , 6, 3)= &quot;A1E&quot;, &quot;BDE&quot;,
IF(MID( Zpl_Customer_ID__c , 6, 3)= &quot;A8A&quot;, &quot;BFA&quot;,
IF(MID( Zpl_Customer_ID__c , 6, 3)= &quot;A8C&quot;, &quot;BFC&quot;,
IF(MID( Zpl_Customer_ID__c , 6, 3)= &quot;A8F&quot;, &quot;BFE&quot;,
&quot;XXX&quot;)))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Convert Canada A custs to B</label>
    <type>Text</type>
</CustomField>