force-app/main/default/objects/Account/fields/Core_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Core_Contacts__c</fullName>
    <label>Core Contacts</label>
    <type>TextArea</type>
</CustomField>