force-app/main/default/objects/Account/fields/Count_of_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Agreements__c</fullName>
    <label>Count of Agreements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>