force-app/main/default/objects/Account/fields/Count_of_Pending_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Pending_Approvals__c</fullName>
    <formula>ActivePricingContract__r.Pending_Approvals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Pending Approvals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>