force-app/main/default/objects/Account/fields/CountofCLIsAccepted_PartiallyAccepted__c.field-meta.xml
<CustomField>
    <fullName>CountofCLIsAccepted_PartiallyAccepted__c</fullName>
    <formula>ActivePricingContract__r.CLIs_Accepted_Partially_Accepted_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CountofCLIsAccepted+PartiallyAccepted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>