force-app/main/default/objects/Account/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>This field gets the country based on the currency.</description>
    <formula>IF(ISPICKVAL(CurrencyIsoCode, &quot;USD&quot;), 
&quot;USA&quot;,&quot;CAN&quot;)</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>