force-app/main/default/objects/Account/fields/CPN_Complete__c.field-meta.xml
<CustomField>
    <fullName>CPN_Complete__c</fullName>
    <description>Checklist item for CX</description>
    <inlineHelpText>Work with sales to get CPN information and Load CPNs</inlineHelpText>
    <label>CPN Complete</label>
    <length>250</length>
    <type>Text</type>
</CustomField>