force-app/main/default/objects/Account/fields/Credit_Action_for_Setup__c.field-meta.xml
<CustomField>
    <fullName>Credit_Action_for_Setup__c</fullName>
    <description>After IT pings credit, they will send back a code to the Prospect record that indicates which next step the rep needs to take.

1 - Credit App is needed
2 - Bill To setup needed
3 - Ship To setup needed
4 - National account - must be handled by NAM team, send email to that box
5 - Other - Email generated to both Rep and the credit group mailbox containing all the details</description>
    <inlineHelpText>1 - Credit App is needed
2 - Bill To setup needed
3 - Ship To setup needed
4 - National account - must be handled by NAM team, send email to that box
5 - Other - Email generated to both Rep and the credit group mailbox containing all the details</inlineHelpText>
    <label>Credit - Action for Setup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>