force-app/main/default/objects/Account/fields/Credit_Action_from_Credit_Dept__c.field-meta.xml
<CustomField>
    <fullName>Credit_Action_from_Credit_Dept__c</fullName>
    <description>Credit will manually select the correct form from the below actions.
1 - Credit App is needed
2 - Bill To setup needed
3 - Ship To setup needed
4 - National account - must be handled by NAM team, send email to that box</description>
    <inlineHelpText>1 - Credit App is needed
2 - Bill To setup needed
3 - Ship To setup needed
4 - National account - must be handled by NAM team, send email to that box</inlineHelpText>
    <label>Credit - Action from Credit Dept</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>