force-app/main/default/objects/Account/fields/Credit_Action_Updated__c.field-meta.xml
<CustomField>
    <fullName>Credit_Action_Updated__c</fullName>
    <description>timestamp for when credit team updates the Credit - Action from Credit Dept field, so they can track their time to respond</description>
    <label>Credit Action Updated</label>
    <type>DateTime</type>
</CustomField>