force-app/main/default/objects/Account/fields/credit_app_link_account__c.field-meta.xml
<CustomField>
    <fullName>credit_app_link_account__c</fullName>
    <formula>&apos;https://www.tfaforms.com/4896179?acctid=&apos;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>credit app link account</label>
    <type>Text</type>
</CustomField>