force-app/main/default/objects/Account/fields/Credit_App_Returned__c.field-meta.xml
<CustomField>
    <fullName>Credit_App_Returned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>update by Form Assembly forms to indicate we got a form returned.  For use in reporting</description>
    <label>Credit App Returned</label>
    <type>Checkbox</type>
</CustomField>