force-app/main/default/objects/Account/fields/Credit_Card_Code__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Code__c</fullName>
    <label>Credit Card Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>