force-app/main/default/objects/Account/fields/Credit_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Credit_Contact_Email__c</fullName>
    <inlineHelpText>Email address to send the Credit Application to</inlineHelpText>
    <label>Customer Contact Email</label>
    <type>Email</type>
</CustomField>