force-app/main/default/objects/Account/fields/Credit_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Contact_First_Name__c</fullName>
    <inlineHelpText>First name of the person you wish to send the credit application to.</inlineHelpText>
    <label>Customer Contact First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>