force-app/main/default/objects/Account/fields/Credit_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Contact_Last_Name__c</fullName>
    <inlineHelpText>Last Name of the person you wish to send the Credit Application to</inlineHelpText>
    <label>Customer Contact Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>