force-app/main/default/objects/Account/fields/Credit_Oracle_Reason_for_Difference__c.field-meta.xml
<CustomField>
    <fullName>Credit_Oracle_Reason_for_Difference__c</fullName>
    <inlineHelpText>If you see that credit dept came up with a different action than Oracle, and if you know the reason why, please enter a brief description here.</inlineHelpText>
    <label>Credit/Oracle Reason for Difference</label>
    <type>TextArea</type>
</CustomField>