force-app/main/default/objects/Account/fields/Credit_Party_ID__c.field-meta.xml
<CustomField>
    <fullName>Credit_Party_ID__c</fullName>
    <description>If the initial setup call brings back code 02 (new billto needed), then they will also send us a Party ID that we&apos;ll then pass back to them after the customer fills in the billto form.</description>
    <label>Credit - Party ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>