force-app/main/default/objects/Account/fields/Credit_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Credit_Reason_Code__c</fullName>
    <description>If the initial call to Oracle comes back with 05 - allow them to include and reason for the 05</description>
    <label>Credit - Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>