force-app/main/default/objects/Account/fields/Credit_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Credit_Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the user that is submitting the data to Credit.  Sales Support will most likely initiate the process, so we need to save that user for emails down the line.</description>
    <label>Credit - Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>