force-app/main/default/objects/Account/fields/Credit_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Submitted_Date__c</fullName>
    <label>Credit - Submitted Date</label>
    <type>DateTime</type>
</CustomField>