force-app/main/default/objects/Account/fields/CSP_Secondary__c.field-meta.xml
<CustomField>
    <fullName>CSP_Secondary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nov 2016 - Data fed in from data warehouse integration for VOS customers.  For Max customers, these are updated manually but only by those in permission set ANI - Edit 123CSP fields on Accounts and Routing Records</description>
    <label>VOS CSP2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CSPSecondaryAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>