force-app/main/default/objects/Account/fields/CSP_Tertiary__c.field-meta.xml
<CustomField>
    <fullName>CSP_Tertiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Third in order for phone routing if needed.  This field is updated manually across all systems, but only by those in permission set ANI - Edit 123CSP fields on Accounts and Routing Records</description>
    <label>CSP Tertiary</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CSPTertiaryAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>