force-app/main/default/objects/Account/fields/CSPs_list__c.field-meta.xml
<CustomField>
    <fullName>CSPs_list__c</fullName>
    <description>Concatenating the 3 ANI field names to be used in ANI reporting</description>
    <formula>ANI_Primary__r.FirstName &amp; &quot; &quot; &amp;  ANI_Primary__r.LastName &amp; &quot;, &quot; &amp;  ANI_Secondary__r.FirstName &amp; &quot; &quot; &amp;  ANI_Secondary__r.LastName &amp; &quot;, &quot; &amp;  ANI_Tertiary__r.FirstName &amp; &quot; &quot; &amp;  ANI_Tertiary__r.LastName</formula>
    <label>ANI List</label>
    <type>Text</type>
</CustomField>