force-app/main/default/objects/Account/fields/CTS_Pricing__c.field-meta.xml
<CustomField>
    <fullName>CTS_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CTS Pricing</label>
    <type>Checkbox</type>
</CustomField>