force-app/main/default/objects/Account/fields/Cust_Onboard_Form_Filled_Out__c.field-meta.xml
<CustomField>
    <fullName>Cust_Onboard_Form_Filled_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Form Assembly form Customer Onboarding will mark this as true when updating account.  Used for triggering email notification</description>
    <label>Cust Onboard Form Filled Out</label>
    <type>Checkbox</type>
</CustomField>