force-app/main/default/objects/Account/fields/Cust_Onboard_send_to__c.field-meta.xml
<CustomField>
    <fullName>Cust_Onboard_send_to__c</fullName>
    <description>This is the email of the person we want to send the Customer Onboarding form to,  Filled in from screen flow</description>
    <label>Cust Onboard - send to</label>
    <type>Email</type>
</CustomField>