force-app/main/default/objects/Account/fields/Customer_Focus_Areas__c.field-meta.xml
<CustomField>
    <fullName>Customer_Focus_Areas__c</fullName>
    <description>CUSTOMER SERVICE SPECIFIC</description>
    <inlineHelpText>Competitive landscape, concerns, expectations, credit, non-OE activities, likes/dislikes</inlineHelpText>
    <label>Customer Focus Areas</label>
    <type>TextArea</type>
</CustomField>