force-app/main/default/objects/Account/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <description>Nov 2016 - Data fed in from data warehouse integration.
July 2020 - Oracle ID project to sunset utilization of this field. ETA Early Sept 2020.</description>
    <externalId>true</externalId>
    <label>Customer Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>