force-app/main/default/objects/Account/fields/Customer_ID_to_Merge_With__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID_to_Merge_With__c</fullName>
    <description>Used for merging x accounts to new VOS accounts</description>
    <label>Customer ID to Merge With</label>
    <length>40</length>
    <type>Text</type>
</CustomField>