force-app/main/default/objects/Account/fields/Customer_Link_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Link_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be updated by System Admins for all accounts that are part of the Customer Link project.  If updated, it allows them to enter and Account Plan for record type Customer Link</description>
    <label>Customer Link Account</label>
    <type>Checkbox</type>
</CustomField>