force-app/main/default/objects/Account/fields/Customer_Onboarding_Link_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Onboarding_Link_Account__c</fullName>
    <formula>&apos;https://www.tfaforms.com/5106918?acctid=&apos;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Onboarding Link Account</label>
    <type>Text</type>
</CustomField>