force-app/main/default/objects/Account/fields/Customer_Part_CPN__c.field-meta.xml
<CustomField>
    <fullName>Customer_Part_CPN__c</fullName>
    <description>CUSTOMER SERVICE SPECIFIC</description>
    <label>Customer Part# (CPN)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>