force-app/main/default/objects/Account/fields/Customer_Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Level__c</fullName>
    <description>This is &quot;Customer Service Level Description&quot; from existing system. Nov 2016 - Data fed in from data warehouse integration.</description>
    <label>Customer Service Level</label>
    <length>40</length>
    <type>Text</type>
</CustomField>