force-app/main/default/objects/Account/fields/Cut_Size_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cut_Size_Notes__c</fullName>
    <label>Cut Size Notes</label>
    <type>TextArea</type>
</CustomField>