force-app/main/default/objects/Account/fields/Cutting__c.field-meta.xml
<CustomField>
    <fullName>Cutting__c</fullName>
    <description>Customer Service Specific</description>
    <inlineHelpText>Internal vs. External</inlineHelpText>
    <label>Cutting</label>
    <length>200</length>
    <type>Text</type>
</CustomField>