force-app/main/default/objects/Account/fields/D_B_Address_Space_Accur__c.field-meta.xml
<CustomField>
    <fullName>D_B_Address_Space_Accur__c</fullName>
    <description>Fed from DW</description>
    <label>D&amp;B - Address Space Accur</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>