force-app/main/default/objects/Account/fields/D_B_Address_Space_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>D_B_Address_Space_Unit_of_Measure__c</fullName>
    <description>This is fed in from D&amp;B via data warehouse</description>
    <label>D&amp;B - Address Space Unit of Measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>