force-app/main/default/objects/Account/fields/D_B_Latitude__c.field-meta.xml
<CustomField>
    <fullName>D_B_Latitude__c</fullName>
    <description>Fed from DW</description>
    <label>D&amp;B - Latitude</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>