force-app/main/default/objects/Account/fields/D_B_Longitude__c.field-meta.xml
<CustomField>
    <fullName>D_B_Longitude__c</fullName>
    <description>Fed from DW</description>
    <label>D&amp;B - Longitude</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>