force-app/main/default/objects/Account/fields/D_B_Marketing_Prescreen_Score__c.field-meta.xml
<CustomField>
    <fullName>D_B_Marketing_Prescreen_Score__c</fullName>
    <description>this data is fed in from the D&amp;B integration</description>
    <label>D&amp;B - Marketing Prescreen Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>