force-app/main/default/objects/Account/fields/D_B_Metro_Area__c.field-meta.xml
<CustomField>
    <fullName>D_B_Metro_Area__c</fullName>
    <description>Fed from DW</description>
    <label>D&amp;B - Metro Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>